# memory-optimizer-py

./: MANIFEST.in  Makefile  README.md  dev-install.sh  pyproject.toml  pytest.ini  quick_test.sh  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  tox.ini
.github/workflow/: test.yml
memory_optimizer/: __init__.py  agent.py  analyzer.py  backup.py  cli.py  optimizer.py  utils.py
tests/: conftest.py  test_agent.py  test_backup.py  test_integration.py  test_optimizer.py
tests/fixtures/: sample_code.py
